fix: better model

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Use it like any other HTML element -->
     <model-viewer
       alt="Christmas Sun"
-      src="assets/christmas-sun.glb"
+      src="assets/christmas-sun-2.glb"
       ar
       ar-modes="webxr scene-viewer quick-look"
-      poster="assets/christmas-sun.png"
+      poster="assets/christmas-sun-2.png"
       seamless-poster
       shadow-intensity="1"
       camera-controls
