--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       seamless-poster
       shadow-intensity="1"
       camera-controls
+      auto-rotate
     ></model-viewer>
     <h1>Christmas Sun</h1>
     <p>
