--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <!-- Use it like any other HTML element -->
       <model-viewer
-        alt="Christmas Sun"
+        alt="Christmas Sun model"
         src="assets/christmas-sun-6.glb"
         ar
         ar-modes="webxr scene-viewer quick-look"
@@ -44,32 +44,33 @@
         </p>
         <p>
           This model shows the position of the sun every month on the 21st day.
-          December 21st is the shortest day and June 21st is the longest day.
-          The angles of the sun are from Edinburgh (or the same latitude
-          elsewhere).
+          December 21st is the shortest day and June 21st is the longest day in
+          Edinburgh (or the same latitude elsewhere).
         </p>
         <p>
           <em
             >If you're on a mobile phone click on the symbol at the bottom right
-            of the model to view it with Augmented Reality</em
+            of the model to view it with Augmented Reality. Try projecting it
+            onto a table or floor and moving around the artwork.</em
           >
         </p>
       </section>
       <section>
         <h2>About this artwork</h2>
         <p>
-          Each vertical column has a hole which you can look through, or shine a
-          light through to experience the angle of the sun in Edinburgh (or at
-          56 ° latitude) during the year. There are a number of small holes at
-          the base of each vertical to represent the month, from 1 - 12.
+          Each vertical column has a large hole at the top which you can look
+          through, or shine a light through to experience the angle of the sun
+          in Edinburgh during the year (or elsewhere at 56 ° latitude). There
+          are a number of small holes at the base of each vertical to represent
+          the month, from 1 - 12.
         </p>
         <p>
-          Ediburgh is used as a basis for the latitude as that is where the
-          artist lives, it's also on a latitude that represents the experience
-          of many in northern parts of Europe, a place with very little sun in
-          winter, but a lot of sun in summer. As humans we experience things in
-          the moment, but viewing in one model the sun over a whole year you can
-          experience something very interesting about our position on the globe.
+          Edinburgh is the latitude where the artist lives, it's also on a
+          latitude that represents the experience of many in northern parts of
+          Europe, a place with very little sun in winter and a lot of sun in
+          summer. As humans we experience things in the moment, by viewing the
+          sun's position over a whole year you can experience something very
+          interesting about our position on the globe.
         </p>
         <p>
           This artwork is also available as a 3D printed model and a plotted
