--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <p>
           This model shows the position of the sun every month on the 21st day.
           December 21st is the shortest day and June 21st is the longest day in
-          Edinburgh (or the same latitude elsewhere).
+          Northern Europe (the models shows the positions in Edinburgh, or the
+          same latitude elsewhere).
         </p>
         <p>
           <em
@@ -60,21 +61,20 @@
         <p>
           Each vertical column has a large hole at the top which you can look
           through, or shine a light through to experience the angle of the sun
-          in Edinburgh during the year (or elsewhere at 56 ° latitude). There
-          are a number of small holes at the base of each vertical to represent
-          the month, from 1 - 12.
+          in Edinburgh during the year (56 ° latitude). There are a number of
+          small holes at the base of each vertical to represent the month, from
+          1 - 12.
         </p>
         <p>
           Edinburgh is the latitude where the artist lives, it's also on a
           latitude that represents the experience of many in northern parts of
           Europe, a place with very little sun in winter and a lot of sun in
           summer. As humans we experience things in the moment, by viewing the
-          sun's position over a whole year you can experience something very
-          interesting about our position on the globe.
+          sun's position over a whole year you can experience a more holistic
+          view of time and place.
         </p>
         <p>
-          This artwork is also available as a 3D printed model and a plotted
-          drawing.
+          This artwork is available as a 3D printed model and a plotted drawing.
         </p>
       </section>
     </main>
