--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <em
             >If you're on a mobile phone click on the symbol at the bottom right
             of the model to view it with Augmented Reality. Try projecting it
-            onto a table or floor and moving around the artwork.</em
+            onto a table or floor and moving around the artwork. On a desktop
+            you can click, drag and zoom by using gestures or a scroll wheel</em
           >
         </p>
       </section>
