--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
           1 - 12.
         </p>
         <p>
+          In order to experience the angle of the sun in December look through
+          the hole on the shortest column towards the tree, this column has 12
+          small holes at its base. Looking through the hole at the top of the
+          tallest column, which represents June 21st, shows the angle of the sun
+          on the longest day of the year, this column has 6 small holes at its
+          base. In this way you can experience the suns progression throughout
+          the year in Edinburgh.
+        </p>
+        <p>
           Edinburgh is the latitude where the artist lives, it's also on a
           latitude that represents the experience of many in northern parts of
           Europe, a place with very little sun in winter and a lot of sun in
@@ -75,7 +84,8 @@
           view of time and place.
         </p>
         <p>
-          This artwork is available as a 3D printed model and a plotted drawing.
+          This artwork is available as a 3D printed model, which is assembled as
+          a kit and a plotted drawing.
         </p>
       </section>
     </main>
