--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>
           This model shows the position of the sun every month on the 21st day.
           December 21st is the shortest day and June 21st is the longest day in
-          Northern Europe (the models shows the positions in Edinburgh, or the
+          Northern Europe (the model shows the positions in Edinburgh, or the
           same latitude elsewhere).
         </p>
         <p>
