feat: plausible snippet

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      defer
+      data-domain="lab.amcc.io/christmas-sun"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
   <body>
     <main>
